--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check": "prettier --check \"src/**/*.ts*\"",
+    "format": "prettier --write \"src/**/*.ts*\"" 
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -20,10 +22,11 @@
     "@types/react-dom": "^19.1.6",
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.6.0",
-    "eslint": "^9.30.1",
+    "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "prettier": "3.6.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
