--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "check": "prettier --check \"src/**/*.ts*\"",
-    "format": "prettier --write \"src/**/*.ts*\"" 
+    "format": "prettier --write \"src/**/*.ts*\""
   },
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.1",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
