--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,6 +2,7 @@
 	"printWidth": 100,
 	"endOfLine": "lf",
 	"singleQuote": true,
+	"jsxSingleQuote": true,
 	"semi": false,
 	"useTabs": true,
 	"tabWidth": 4,
